// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test base/page/project/modal/add should match snapshot 1`] = `
<body>
  <div />
  <div>
    <div
      class="ant-drawer ant-drawer-right css-dev-only-do-not-override-txh9fw ant-drawer-open"
      tabindex="-1"
    >
      <div
        class="ant-drawer-mask"
      />
      <div
        aria-hidden="true"
        data-sentinel="start"
        style="width: 0px; height: 0px; overflow: hidden; outline: none; position: absolute;"
        tabindex="0"
      />
      <div
        class="ant-drawer-content-wrapper"
        style="width: 480px;"
      >
        <div
          aria-modal="true"
          class="ant-drawer-content basic-drawer-wrapper css-1q29jje"
          role="dialog"
        >
          <div
            class="ant-drawer-wrapper-body"
          >
            <div
              class="ant-drawer-header"
            >
              <div
                class="ant-drawer-header-title"
              >
                <div
                  class="ant-drawer-title"
                >
                  创建项目
                </div>
              </div>
            </div>
            <div
              class="ant-drawer-body"
            >
              <div
                class="closed-icon-custom"
              >
                <span
                  aria-label="close"
                  class="anticon anticon-close"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="close"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 00203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
                    />
                  </svg>
                </span>
              </div>
              <form
                class="ant-form ant-form-vertical css-dev-only-do-not-override-txh9fw"
              >
                <div
                  class="ant-form-item css-dev-only-do-not-override-txh9fw"
                >
                  <div
                    class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
                  >
                    <div
                      class="ant-col ant-form-item-label css-dev-only-do-not-override-txh9fw"
                    >
                      <label
                        class="ant-form-item-required ant-form-item-no-colon"
                        for="name"
                        title="项目名称"
                      >
                        项目名称
                      </label>
                    </div>
                    <div
                      class="ant-col ant-form-item-control css-dev-only-do-not-override-txh9fw"
                    >
                      <div
                        class="ant-form-item-control-input"
                      >
                        <div
                          class="ant-form-item-control-input-content"
                        >
                          <input
                            aria-required="true"
                            class="ant-input css-dev-only-do-not-override-ywkr0o basic-input-wrapper css-1pd1cd5"
                            id="name"
                            placeholder="请输入{{name}}"
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="ant-form-item css-dev-only-do-not-override-txh9fw"
                >
                  <div
                    class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
                  >
                    <div
                      class="ant-col ant-form-item-label css-dev-only-do-not-override-txh9fw"
                    >
                      <label
                        class="ant-form-item-no-colon"
                        for="desc"
                        title="项目描述"
                      >
                        项目描述
                      </label>
                    </div>
                    <div
                      class="ant-col ant-form-item-control css-dev-only-do-not-override-txh9fw"
                    >
                      <div
                        class="ant-form-item-control-input"
                      >
                        <div
                          class="ant-form-item-control-input-content"
                        >
                          <textarea
                            class="ant-input css-dev-only-do-not-override-txh9fw basic-input-wrapper css-1pd1cd5"
                            id="desc"
                            placeholder="请输入{{name}}"
                            style="resize: none; height: 2px;"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="ant-form-item has-label-tip css-1jlm9cy css-dev-only-do-not-override-txh9fw"
                >
                  <div
                    class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
                  >
                    <div
                      class="ant-col ant-form-item-label css-dev-only-do-not-override-txh9fw"
                    >
                      <label
                        class="ant-form-item-no-colon"
                        for="isFixedBusiness"
                        title=""
                      >
                        <div
                          class="label-cont-custom"
                        >
                          <div>
                            是否固定可选业务标签
                          </div>
                          <div
                            class="tip-content-box"
                          >
                            若开启，项目内可用的业务标签将被固定，仅能由管理员管理
                          </div>
                        </div>
                      </label>
                    </div>
                    <div
                      class="ant-col ant-form-item-control css-dev-only-do-not-override-txh9fw"
                    >
                      <div
                        class="ant-form-item-control-input"
                      >
                        <div
                          class="ant-form-item-control-input-content"
                        >
                          <button
                            aria-checked="true"
                            class="ant-switch basic-switch-wrapper css-g6dhbn css-dev-only-do-not-override-txh9fw ant-switch-checked"
                            id="isFixedBusiness"
                            role="switch"
                            type="button"
                          >
                            <div
                              class="ant-switch-handle"
                            />
                            <span
                              class="ant-switch-inner"
                            >
                              <span
                                class="ant-switch-inner-checked"
                              />
                              <span
                                class="ant-switch-inner-unchecked"
                              />
                            </span>
                          </button>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center config-item-filed"
                >
                  <div
                    class="ant-space-item"
                  >
                    <div
                      class="ant-form-item css-dev-only-do-not-override-txh9fw"
                    >
                      <div
                        class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
                      >
                        <div
                          class="ant-col ant-form-item-label css-dev-only-do-not-override-txh9fw"
                        >
                          <label
                            class="ant-form-item-required ant-form-item-no-colon"
                            for="business_0_name"
                            title="可用业务"
                          >
                            可用业务
                          </label>
                        </div>
                        <div
                          class="ant-col ant-form-item-control css-dev-only-do-not-override-txh9fw"
                        >
                          <div
                            class="ant-form-item-control-input"
                          >
                            <div
                              class="ant-form-item-control-input-content"
                            >
                              <div
                                class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center"
                              >
                                <div
                                  class="ant-space-item"
                                  style="margin-right: 8px;"
                                >
                                  <div
                                    class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center"
                                  >
                                    <div
                                      class="ant-space-item"
                                      style="margin-right: 8px;"
                                    >
                                      <input
                                        class="ant-input ant-input-disabled css-dev-only-do-not-override-ywkr0o basic-input-wrapper css-1pd1cd5"
                                        disabled=""
                                        placeholder=""
                                        type="text"
                                        value=""
                                        width="200"
                                      />
                                    </div>
                                    <div
                                      class="ant-space-item"
                                    >
                                      <button
                                        class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default ant-btn-icon-only edit-button basic-button-wrapper css-iieact"
                                        type="button"
                                      >
                                        <span
                                          class="ant-btn-icon"
                                        >
                                          <svg
                                            fill="none"
                                            height="16"
                                            viewBox="0 0 16 16"
                                            width="16"
                                            xmlns="http://www.w3.org/2000/svg"
                                          >
                                            <g
                                              id="edit-2-fill"
                                            >
                                              <path
                                                d="M6.162 12.6667H14V14H2V11.1713L8.6 4.57133L11.428 7.40066L6.16133 12.6667H6.162ZM9.542 3.62933L10.9567 2.21466C11.0817 2.08968 11.2512 2.01947 11.428 2.01947C11.6048 2.01947 11.7743 2.08968 11.8993 2.21466L13.7853 4.10066C13.9103 4.22568 13.9805 4.39522 13.9805 4.57199C13.9805 4.74877 13.9103 4.91831 13.7853 5.04333L12.3707 6.45733L9.54267 3.62933H9.542Z"
                                                fill="#8A8F99"
                                                id="Vector"
                                              />
                                            </g>
                                          </svg>
                                        </span>
                                      </button>
                                    </div>
                                  </div>
                                </div>
                                <div
                                  class="ant-space-item"
                                >
                                  <button
                                    class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default ant-btn-icon-only delete-button-disabled basic-button-wrapper css-iieact"
                                    disabled=""
                                    type="button"
                                  >
                                    <span
                                      class="ant-btn-icon"
                                    >
                                      <svg
                                        fill="none"
                                        height="16"
                                        viewBox="0 0 16 16"
                                        width="16"
                                        xmlns="http://www.w3.org/2000/svg"
                                      >
                                        <path
                                          d="M8.00016 14.6667C4.31816 14.6667 1.3335 11.682 1.3335 8.00004C1.3335 4.31804 4.31816 1.33337 8.00016 1.33337C11.6822 1.33337 14.6668 4.31804 14.6668 8.00004C14.6668 11.682 11.6822 14.6667 8.00016 14.6667ZM4.66683 7.33337V8.66671H11.3335V7.33337H4.66683Z"
                                          fill="#F66074"
                                        />
                                      </svg>
                                    </span>
                                  </button>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="ant-form-item css-dev-only-do-not-override-txh9fw"
                >
                  <div
                    class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
                  >
                    <div
                      class="ant-col ant-form-item-control css-dev-only-do-not-override-txh9fw"
                    >
                      <div
                        class="ant-form-item-control-input"
                      >
                        <div
                          class="ant-form-item-control-input-content"
                        >
                          <button
                            class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default form-list-add basic-button-wrapper css-1719g3l"
                            type="button"
                          >
                            <span
                              class="ant-btn-icon"
                            >
                              <svg
                                fill="none"
                                height="16"
                                viewBox="0 0 16 16"
                                width="16"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M7.00016 13.6667C3.31816 13.6667 0.333496 10.682 0.333496 7.00004C0.333496 3.31804 3.31816 0.333374 7.00016 0.333374C10.6822 0.333374 13.6668 3.31804 13.6668 7.00004C13.6668 10.682 10.6822 13.6667 7.00016 13.6667ZM6.3335 6.33337H3.66683V7.66671H6.3335V10.3334H7.66683V7.66671H10.3335V6.33337H7.66683V3.66671H6.3335V6.33337Z"
                                  fill="#4583FF"
                                />
                              </svg>
                            </span>
                            <span>
                              添加业务
                            </span>
                          </button>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </form>
            </div>
            <div
              class="ant-drawer-footer"
            >
              <div
                class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center"
              >
                <div
                  class="ant-space-item"
                  style="margin-right: 8px;"
                >
                  <button
                    class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default basic-button-wrapper css-geipcv"
                    type="button"
                  >
                    <span>
                      关 闭
                    </span>
                  </button>
                </div>
                <div
                  class="ant-space-item"
                >
                  <button
                    class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-primary basic-button-wrapper css-geipcv"
                    type="button"
                  >
                    <span>
                      提 交
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        aria-hidden="true"
        data-sentinel="end"
        style="width: 0px; height: 0px; overflow: hidden; outline: none; position: absolute;"
        tabindex="0"
      />
    </div>
  </div>
  <textarea
    aria-hidden="true"
    style="letter-spacing:normal;line-height:1.5714285714285714;padding-top:4px;padding-bottom:4px;font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,'Helvetica Neue',Arial,'Noto Sans',sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol','Noto Color Emoji';font-weight:;font-size:14px;font-variant:;text-rendering:auto;text-transform:none;width:100%;text-indent:0;padding-left:11px;padding-right:11px;border-width:1px;box-sizing:border-box;word-break:;white-space:pre-wrap;
  min-height:0 !important;
  max-height:none !important;
  height:0 !important;
  visibility:hidden !important;
  overflow:hidden !important;
  position:absolute !important;
  z-index:-1000 !important;
  top:0 !important;
  right:0 !important;
  pointer-events: none !important;
"
    tab-index="-1"
  />
</body>
`;

exports[`test base/page/project/modal/add should send create project request when clicking submit button 1`] = `
<body>
  <textarea
    aria-hidden="true"
    style="letter-spacing:normal;line-height:1.5714285714285714;padding-top:4px;padding-bottom:4px;font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,'Helvetica Neue',Arial,'Noto Sans',sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol','Noto Color Emoji';font-weight:;font-size:14px;font-variant:;text-rendering:auto;text-transform:none;width:100%;text-indent:0;padding-left:11px;padding-right:11px;border-width:1px;box-sizing:border-box;word-break:;white-space:pre-wrap;
  min-height:0 !important;
  max-height:none !important;
  height:0 !important;
  visibility:hidden !important;
  overflow:hidden !important;
  position:absolute !important;
  z-index:-1000 !important;
  top:0 !important;
  right:0 !important;
  pointer-events: none !important;
"
    tab-index="-1"
  />
  <div />
  <div>
    <div
      class="ant-drawer ant-drawer-right css-dev-only-do-not-override-txh9fw ant-drawer-open"
      tabindex="-1"
    >
      <div
        class="ant-drawer-mask"
      />
      <div
        aria-hidden="true"
        data-sentinel="start"
        style="width: 0px; height: 0px; overflow: hidden; outline: none; position: absolute;"
        tabindex="0"
      />
      <div
        class="ant-drawer-content-wrapper"
        style="width: 480px;"
      >
        <div
          aria-modal="true"
          class="ant-drawer-content basic-drawer-wrapper css-1q29jje"
          role="dialog"
        >
          <div
            class="ant-drawer-wrapper-body"
          >
            <div
              class="ant-drawer-header"
            >
              <div
                class="ant-drawer-header-title"
              >
                <div
                  class="ant-drawer-title"
                >
                  创建项目
                </div>
              </div>
            </div>
            <div
              class="ant-drawer-body"
            >
              <div
                class="closed-icon-custom"
              >
                <span
                  aria-label="close"
                  class="anticon anticon-close"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="close"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 00203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
                    />
                  </svg>
                </span>
              </div>
              <form
                class="ant-form ant-form-vertical css-dev-only-do-not-override-txh9fw"
              >
                <div
                  class="ant-form-item css-dev-only-do-not-override-txh9fw ant-form-item-has-success"
                >
                  <div
                    class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
                  >
                    <div
                      class="ant-col ant-form-item-label css-dev-only-do-not-override-txh9fw"
                    >
                      <label
                        class="ant-form-item-required ant-form-item-no-colon"
                        for="name"
                        title="项目名称"
                      >
                        项目名称
                      </label>
                    </div>
                    <div
                      class="ant-col ant-form-item-control css-dev-only-do-not-override-txh9fw"
                    >
                      <div
                        class="ant-form-item-control-input"
                      >
                        <div
                          class="ant-form-item-control-input-content"
                        >
                          <input
                            aria-required="true"
                            class="ant-input ant-input-status-success css-dev-only-do-not-override-ywkr0o basic-input-wrapper css-1pd1cd5"
                            id="name"
                            placeholder="请输入{{name}}"
                            type="text"
                            value="name"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="ant-form-item css-dev-only-do-not-override-txh9fw ant-form-item-has-success"
                >
                  <div
                    class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
                  >
                    <div
                      class="ant-col ant-form-item-label css-dev-only-do-not-override-txh9fw"
                    >
                      <label
                        class="ant-form-item-no-colon"
                        for="desc"
                        title="项目描述"
                      >
                        项目描述
                      </label>
                    </div>
                    <div
                      class="ant-col ant-form-item-control css-dev-only-do-not-override-txh9fw"
                    >
                      <div
                        class="ant-form-item-control-input"
                      >
                        <div
                          class="ant-form-item-control-input-content"
                        >
                          <textarea
                            class="ant-input css-dev-only-do-not-override-txh9fw basic-input-wrapper css-1pd1cd5"
                            id="desc"
                            placeholder="请输入{{name}}"
                            style="resize: none; height: 2px;"
                          >
                            desc
                          </textarea>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="ant-form-item has-label-tip css-1jlm9cy css-dev-only-do-not-override-txh9fw"
                >
                  <div
                    class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
                  >
                    <div
                      class="ant-col ant-form-item-label css-dev-only-do-not-override-txh9fw"
                    >
                      <label
                        class="ant-form-item-no-colon"
                        for="isFixedBusiness"
                        title=""
                      >
                        <div
                          class="label-cont-custom"
                        >
                          <div>
                            是否固定可选业务标签
                          </div>
                          <div
                            class="tip-content-box"
                          >
                            若开启，项目内可用的业务标签将被固定，仅能由管理员管理
                          </div>
                        </div>
                      </label>
                    </div>
                    <div
                      class="ant-col ant-form-item-control css-dev-only-do-not-override-txh9fw"
                    >
                      <div
                        class="ant-form-item-control-input"
                      >
                        <div
                          class="ant-form-item-control-input-content"
                        >
                          <button
                            aria-checked="true"
                            class="ant-switch basic-switch-wrapper css-g6dhbn css-dev-only-do-not-override-txh9fw ant-switch-checked"
                            id="isFixedBusiness"
                            role="switch"
                            type="button"
                          >
                            <div
                              class="ant-switch-handle"
                            />
                            <span
                              class="ant-switch-inner"
                            >
                              <span
                                class="ant-switch-inner-checked"
                              />
                              <span
                                class="ant-switch-inner-unchecked"
                              />
                            </span>
                          </button>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center config-item-filed"
                >
                  <div
                    class="ant-space-item"
                  >
                    <div
                      class="ant-form-item css-dev-only-do-not-override-txh9fw ant-form-item-has-success"
                    >
                      <div
                        class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
                      >
                        <div
                          class="ant-col ant-form-item-label css-dev-only-do-not-override-txh9fw"
                        >
                          <label
                            class="ant-form-item-required ant-form-item-no-colon"
                            for="business_0_name"
                            title="可用业务"
                          >
                            可用业务
                          </label>
                        </div>
                        <div
                          class="ant-col ant-form-item-control css-dev-only-do-not-override-txh9fw"
                        >
                          <div
                            class="ant-form-item-control-input"
                          >
                            <div
                              class="ant-form-item-control-input-content"
                            >
                              <div
                                class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center"
                              >
                                <div
                                  class="ant-space-item"
                                  style="margin-right: 8px;"
                                >
                                  <div
                                    class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center"
                                  >
                                    <div
                                      class="ant-space-item"
                                      style="margin-right: 8px;"
                                    >
                                      <input
                                        class="ant-input ant-input-disabled ant-input-status-success css-dev-only-do-not-override-ywkr0o basic-input-wrapper css-1pd1cd5"
                                        disabled=""
                                        placeholder=""
                                        type="text"
                                        value="test"
                                        width="200"
                                      />
                                    </div>
                                    <div
                                      class="ant-space-item"
                                    >
                                      <button
                                        class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default ant-btn-icon-only edit-button basic-button-wrapper css-iieact"
                                        type="button"
                                      >
                                        <span
                                          class="ant-btn-icon"
                                        >
                                          <svg
                                            fill="none"
                                            height="16"
                                            viewBox="0 0 16 16"
                                            width="16"
                                            xmlns="http://www.w3.org/2000/svg"
                                          >
                                            <g
                                              id="edit-2-fill"
                                            >
                                              <path
                                                d="M6.162 12.6667H14V14H2V11.1713L8.6 4.57133L11.428 7.40066L6.16133 12.6667H6.162ZM9.542 3.62933L10.9567 2.21466C11.0817 2.08968 11.2512 2.01947 11.428 2.01947C11.6048 2.01947 11.7743 2.08968 11.8993 2.21466L13.7853 4.10066C13.9103 4.22568 13.9805 4.39522 13.9805 4.57199C13.9805 4.74877 13.9103 4.91831 13.7853 5.04333L12.3707 6.45733L9.54267 3.62933H9.542Z"
                                                fill="#8A8F99"
                                                id="Vector"
                                              />
                                            </g>
                                          </svg>
                                        </span>
                                      </button>
                                    </div>
                                  </div>
                                </div>
                                <div
                                  class="ant-space-item"
                                >
                                  <button
                                    class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default ant-btn-icon-only delete-button-disabled basic-button-wrapper css-iieact"
                                    disabled=""
                                    type="button"
                                  >
                                    <span
                                      class="ant-btn-icon"
                                    >
                                      <svg
                                        fill="none"
                                        height="16"
                                        viewBox="0 0 16 16"
                                        width="16"
                                        xmlns="http://www.w3.org/2000/svg"
                                      >
                                        <path
                                          d="M8.00016 14.6667C4.31816 14.6667 1.3335 11.682 1.3335 8.00004C1.3335 4.31804 4.31816 1.33337 8.00016 1.33337C11.6822 1.33337 14.6668 4.31804 14.6668 8.00004C14.6668 11.682 11.6822 14.6667 8.00016 14.6667ZM4.66683 7.33337V8.66671H11.3335V7.33337H4.66683Z"
                                          fill="#F66074"
                                        />
                                      </svg>
                                    </span>
                                  </button>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="ant-form-item css-dev-only-do-not-override-txh9fw"
                >
                  <div
                    class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
                  >
                    <div
                      class="ant-col ant-form-item-control css-dev-only-do-not-override-txh9fw"
                    >
                      <div
                        class="ant-form-item-control-input"
                      >
                        <div
                          class="ant-form-item-control-input-content"
                        >
                          <button
                            class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default form-list-add basic-button-wrapper css-1719g3l"
                            type="button"
                          >
                            <span
                              class="ant-btn-icon"
                            >
                              <svg
                                fill="none"
                                height="16"
                                viewBox="0 0 16 16"
                                width="16"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M7.00016 13.6667C3.31816 13.6667 0.333496 10.682 0.333496 7.00004C0.333496 3.31804 3.31816 0.333374 7.00016 0.333374C10.6822 0.333374 13.6668 3.31804 13.6668 7.00004C13.6668 10.682 10.6822 13.6667 7.00016 13.6667ZM6.3335 6.33337H3.66683V7.66671H6.3335V10.3334H7.66683V7.66671H10.3335V6.33337H7.66683V3.66671H6.3335V6.33337Z"
                                  fill="#4583FF"
                                />
                              </svg>
                            </span>
                            <span>
                              添加业务
                            </span>
                          </button>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </form>
            </div>
            <div
              class="ant-drawer-footer"
            >
              <div
                class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center"
              >
                <div
                  class="ant-space-item"
                  style="margin-right: 8px;"
                >
                  <button
                    class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default basic-button-wrapper css-geipcv"
                    type="button"
                  >
                    <span>
                      关 闭
                    </span>
                  </button>
                </div>
                <div
                  class="ant-space-item"
                >
                  <button
                    class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-primary basic-button-wrapper css-geipcv"
                    type="button"
                  >
                    <span>
                      提 交
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        aria-hidden="true"
        data-sentinel="end"
        style="width: 0px; height: 0px; overflow: hidden; outline: none; position: absolute;"
        tabindex="0"
      />
    </div>
  </div>
</body>
`;
